--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,29 @@
 plugins {
+    id 'java'
     id 'idea'
-    id "de.undercouch.download" version "4.0.2"
+    id 'com.google.protobuf' version '0.8.14'
+    id 'de.undercouch.download' version "4.1.1"
+    id 'com.google.osdetector' version '1.6.2'
 }
 
 allprojects {
+    /* Group name of our artifacts */
     group = 'org.vitrivr'
+    /* Our current version */
     version = '3.0.2'
+
+    /* Required to have subprojects dependencies*/
+    apply plugin: 'java'
+    /* Required to have protobuf in all subprojects */
+    apply plugin: 'com.google.protobuf'
+    /* Above is legacy apply method in gradle. There should be a better way to do this using convention plugins / buildSrc*/
 }
 
-project.ext.protobufVersion = "3.9.0"
-project.ext.grpcVersion = "1.22.1"
+project.ext.protobufVersion = "3.12.0"
+project.ext.grpcVersion = "1.34.0"
 
 
 subprojects {
-    buildscript {
-        repositories {
-            jcenter()
-            mavenCentral()
-            maven {
-                url "https://plugins.gradle.org/m2"
-            }
-        }
-
-        dependencies {
-            classpath "gradle.plugin.com.google.gradle:osdetector-gradle-plugin:1.6.2"
-            classpath 'gradle.plugin.com.google.protobuf:protobuf-gradle-plugin:0.8.10'
-            classpath 'de.undercouch:gradle-download-task:3.1.2'
-            classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
-        }
-    }
-
-    apply plugin: 'java'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -55,8 +48,8 @@ subprojects {
         compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.0'
 
         /** Jackson (JSON conversion) */
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'
 
         /** Test dependencies (JUnit 5) */
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.0'
