--- a/cineast-api/build.gradle
+++ b/cineast-api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id "com.google.protobuf" version "0.8.2"
+    id 'java'
 }
 
 
@@ -66,10 +66,10 @@ task fatJar(type: Jar) {
 }
 
 dependencies {
-    compile('io.javalin:javalin-bundle:3.9.1'){
+    compile('io.javalin:javalin-bundle:3.12.0'){
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.10.5'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.12.0'
     compile group: 'de.svenkubiak', name: 'jBCrypt', version: '0.4.1'
 }
 
