--- a/cineast-core/build.gradle
+++ b/cineast-core/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id "com.google.protobuf" version "0.8.2"
     id 'maven'
 }
 
@@ -53,6 +52,10 @@ sourceSets {
 }
 
 dependencies {
+    /* Google Json: GSON, since JSON db layer is based on this */
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+
     /** Some basic stuff (collections etc). */
     compile group: "net.sf.trove4j", name: "trove4j", version: "3.0.3"
     compile group: "com.google.guava", name: "guava", version: "28.0-jre"
@@ -60,7 +63,6 @@ dependencies {
 
     /** Tensorflow (Java). */
     compile group: "org.tensorflow", name: "tensorflow", version: "1.9.0"
-
 
     /** Apache Commons Libraries */
     compile group: "org.apache.commons", name: "commons-lang3", version: "3.9"
