--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ jobs:
         java-version: 11.0.6
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Generate Proto
+      run: ./gradlew generateProto
     - name: Test with Gradle
       run: ./gradlew test
     - name: runtime-jar
